tests/machine/x/go/group_by_conditional_sum.error
Error on line 0: run error: exit status 1
# command-line-arguments
../../../tests/machine/x/go/group_by_conditional_sum.go:51:22: invalid operation: i (variable of struct type ItemsItem) is not an interface

1: //go:build ignore
